Update configuration.mdx to fix typo
Added closing parentheses to line 36.

--- a/website/docs/configuration.mdx
+++ b/website/docs/configuration.mdx
@@ -33,7 +33,7 @@ The `docusaurus.config.js` file supports:
 
 Constraints:
 
-- **Required:** use `export default /* your config*/` (or `module.exports` to export your Docusaurus config
+- **Required:** use `export default /* your config*/` (or `module.exports`) to export your Docusaurus config
 - **Optional:** use `import Lib from 'lib'` (or `require('lib')`) to import Node.js packages
 
 :::
